[project]
name = "torpost"
version = "0.0.2"
description = "Post Torrents"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["post", "torrents", "upload"]

authors = [
  {name = "brokedarius", email = "-@-.org" }
]

maintainers = [
  {name = "brokedarius", email = "-@-.org" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "bluprints@git+https://github.com/MrArgparse/bluprints",
  "breppy@git+https://github.com/MrArgparse/breppy",
  "duppy@git+https://github.com/MrArgparse/duppy",
  "msgspec",
  "platformdirs",
  "rich",
  "tomlkit",
  "urllib3"
]

[project.scripts]
torpost = "torpost.__main__:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
